コスト面からClaude API→Gemini APIに方針変更

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-# Anthropic API Key for Anomaly Detection (Required)
-ANTHROPIC_API_KEY=your_api_key_here
+# Google Gemini API Key for Anomaly Detection (Required)
+GEMINI_API_KEY=your_api_key_here
 
 # Streamlit Configuration (Optional)
 STREAMLIT_THEME_BASE=dark
