--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "plotly>=5.15.0",
     "python-dotenv>=1.0.0",
     "reportlab>=4.0.0",
-    "anthropic>=0.3.0",
+    "google-generativeai>=0.3.0",
 ]
 
 [project.optional-dependencies]
