--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ streamlit>=1.24.0
 plotly>=5.15.0
 python-dotenv>=1.0.0
 reportlab>=4.0.0
-anthropic>=0.3.0
+google-generativeai>=0.3.0
 pytest>=7.4.0
